app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 body{
    width: 80%;
 	margin: 0px auto 0px auto;
 }

 #login{
 	width: 30%;
 	margin: 0px auto 0px auto;
 }

.customer_div{
  width: 80%;
}
.customer_div tr{
  text-align: center;
}
.customerWidth{
  width: 100px;
  overflow: scroll;
}

